product sales ranking done

--- a/ALLProject/pos/templates/pos/navigation.html
+++ b/ALLProject/pos/templates/pos/navigation.html
@@ -7,11 +7,11 @@
 <link rel = "stylesheet" href="{% static "css/cashier/navigation.css" %}">
 <div class="navigation-column" id="navcolumn">
     <!-- Cashier View -->
-    <a class="nav sale"><img src="{% static "assets/shipping.png" %}" class="logo sale"><p class="navfull sale"> Sale</p></a>
-    <a class="nav history"><img src="{% static "assets/file.png" %}" class="logo history"><p class="navfull history"> History</p></a>
+    <a class="nav sale"><img src="{% static "images/shipping.png" %}" class="logo sale"><p class="navfull sale"> Sale</p></a>
+    <a class="nav history"><img src="{% static "images/file.png" %}" class="logo history"><p class="navfull history"> History</p></a>
 
     <!-- Logout -->
-    <a class="nav"><img src="{% static "assets/logout.png" %}" class="logo"><p class="navfull"> Logout</p></a>
+    <a class="nav"><img src="{% static "images/logout.png" %}" class="logo"><p class="navfull"> Logout</p></a>
 </div>
 {% endblock nav%}
 
