--- a/ALLProject/pos/templates/pos/sales_page.html
+++ b/ALLProject/pos/templates/pos/sales_page.html
@@ -26,7 +26,7 @@
                             })
                         </script>
                         <div class="buttons add">
-                            <button type="button" class="close-product-box" id="close-addItem"><img src="{% static 'assets/back-arrow.png' %}" alt="back-arrow" id="close-product"></button>
+                            <button type="button" class="close-product-box" id="close-addItem"><img src="{% static 'images/back-arrow.png' %}" alt="back-arrow" id="close-product"></button>
                             <button type="submit" id="addItemBttn">Add</button>
                         </div>
                     </form>
@@ -73,7 +73,7 @@
                         </div>
                     
                         <div class="buttons confirm">
-                            <button type="button" class="close-product-box" id="close-quantity"><img src="{% static 'assets/back-arrow.png' %}" alt="back-arrow" id="close-product"></button>
+                            <button type="button" class="close-product-box" id="close-quantity"><img src="{% static 'images/back-arrow.png' %}" alt="back-arrow" id="close-product"></button>
                             <input type="submit" id="confirmBttn">
                         </div>
                     </form>
