--- a/ALLProject/pos/templates/pos/view_history.html
+++ b/ALLProject/pos/templates/pos/view_history.html
@@ -13,7 +13,7 @@
                 <div class="filter">
                     <div class="filter date">
                         <h3 id="filter-title">20 APRIL 2025 - 20 MAY 2025</h3>
-                        <img src="assets/arrow-down.png" class="logo dropdown">
+                        <img src="images/arrow-down.png" class="logo dropdown">
                     </div>
                     <div class="filter-date-box">
                         <div class="filter-date fixed">
@@ -32,7 +32,7 @@
                     </div>
                     <div class="filter payment-type">
                         <h3 id="filter-title"> Filter </h3>
-                        <img src="assets/adjust.png" class="logo filter">
+                        <img src="images/adjust.png" class="logo filter">
                     </div>
                     <div class="filter-payment-box">
                         <ul>
@@ -124,7 +124,7 @@
             </div>
 
             <div class="transact-detail">
-                <button type="button" id="close-box"><img src="assets/back-arrow.png" alt="back-arrow" id="close"></button>
+                <button type="button" id="close-box"><img src="images/back-arrow.png" alt="back-arrow" id="close"></button>
                 <div class="container">
                     <h3>Created on 21 April 2025</h3>
                     <h3>Receipt Number: 100024000</h3>
