--- a/ALLProject/reports/static/css/best_selling.css
+++ b/ALLProject/reports/static/css/best_selling.css
@@ -37,15 +37,26 @@ h3,h4 {
 
 #main-content {
     position: relative;
-    left: 8%;
+    left: 7%;
     top: 14vh;
-    width: 60%;
+    width: 91%;
     height: 83vh;
     
     background-color: #FFF;
     border-radius: 10px;
-    overflow: hidden;
+    overflow-y: scroll;
 }
+#main-content::-webkit-scrollbar {
+    display: none;
+}
+
+.filter {
+    width: 2em;
+    height: 2em;
+    padding-left: 1em;
+    opacity: 0.6;
+}
+
 
 table.products {
     width: 100%;
@@ -57,6 +68,20 @@ table.products {
 thead.products {
     height: 2.5em;
     box-shadow: 0px 2px 4px 0px rgba(222, 218, 203, 0.8);
+}
+th.products {
+    align-items: center;
+    justify-self: center;
+    justify-items: center;
+}
+.header-container {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+.header-text {
+    position: static;
+    margin-top: 5%;
 }
 
 tbody.products {
