--- a/ALLProject/reports/static/css/product_detail.css
+++ b/ALLProject/reports/static/css/product_detail.css
@@ -12,7 +12,7 @@
 }
 
 .product-detail {
-    width: 90%;
+    width: 95%;
     height: 85%;
     justify-content: space-between;
     margin-top: 5%;
@@ -49,11 +49,27 @@
     display: flex;
 }
 
-
-.logo {
-    width: 2em;
-    height: 2em;
-    padding-left: 2%;
+.product-detail.graph {
+    width: 100%;
+    height: 60%;
+}
+#graph {
+    width: inherit;
+    height: 85%;
+    
+    border-radius: 10px;
+    background-color: #f1f0e083;
+}
+#graph tbody {
+    height: inherit;
+    padding-bottom: 5%;
+}
+#graph td {
+    border-radius: 10px;
+    background-color: darkseagreen;
+}
+#graph th {
+    color: #4d4d4d;
 }
 
 .logo.dropdown {
@@ -77,14 +93,19 @@
 }
 
 .dropdown-button {
+    display: flex;
     width: 100%;
     height: 100%;
     padding-top: 2.5%;
-    justify-items: center;
+
+    justify-content: center;
+    align-items: center;
 }
 
 .dropdown-content {
     visibility: hidden;
+    position: relative;
+    z-index: 1;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -92,13 +113,16 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.dropdown-content a {
+.dropdown-content button {
+    width: 100%;
+    height: 100%;
+
     color: black;
+    background-color: transparent;
+
     text-decoration: none;
+    border-style: none;
     display: block;
-    text-align: center;
-    padding: 0;
-    padding-top: 5%;
     list-style: none;
 }
   
@@ -121,8 +145,39 @@
     }
 }
 
-#graph {
-    width: 26.5vw;
-    height: 32vh;
-    background-color: antiquewhite;
+#close-product {
+    width: 3vh;
+    height: 3vh;
+    padding: 0;
+}
+.close-product-box {
+    position: fixed;
+    top: 16vh;
+    right: 0;
+
+    width: 5vh;
+    height: 5vh;
+    margin-right: 2%;
+
+    background-color: #DAE0D3;
+    border-style: none;
+    border-radius: 10px;
+}
+.close-product-box:hover {
+    background-color: rgba(232, 101, 106);
+}
+
+#main-content-opened {
+    position: relative;
+    left: 7%;
+    top: 14vh;
+    width: 61%;
+    height: 83vh;
+    
+    background-color: #FFF;
+    border-radius: 10px;
+    overflow-y: scroll;
+}
+#main-content-opened::-webkit-scrollbar {
+    display: none;
 }
