--- a/ALLProject/reports/templates/reports/navigation.html
+++ b/ALLProject/reports/templates/reports/navigation.html
@@ -5,13 +5,13 @@
     <body>
         <div class="navigation-column" id="navcolumn">
             <!-- Manager View -->
-            <a class="nav home"><img src="{% static "assets/home.png" %}" class="logo home"><p class="navfull home"> Home</p></a>
-            <a class="nav inventory"><img src="{% static "assets/shipping.png" %}" class="logo inventory"><p class="navfull inventory"> Inventory</p></a>
-            <a class="nav sales"><img src="{% static "assets/report.png" %}" class="logo sales"><p class="navfull sales"> Sales</p></a>
-            <a class="nav users"><img src="{% static "assets/users.png" %}" class="logo users"><p class="navfull users"> Users</p></a>
+            <a class="nav home"><img src="{% static "images/home.png" %}" class="logo home"><p class="navfull home"> Home</p></a>
+            <a class="nav inventory"><img src="{% static "images/shipping.png" %}" class="logo inventory"><p class="navfull inventory"> Inventory</p></a>
+            <a class="nav sales"><img src="{% static "images/report.png" %}" class="logo sales"><p class="navfull sales"> Sales</p></a>
+            <a class="nav users"><img src="{% static "images/users.png" %}" class="logo users"><p class="navfull users"> Users</p></a>
             
             <!-- Logout -->
-            <a class="nav"><img src="{% static "assets/logout.png" %}" class="logo"><p class="navfull"> Logout</p></a>
+            <a class="nav"><img src="{% static "images/logout.png" %}" class="logo"><p class="navfull"> Logout</p></a>
         </div>
     </body>
 {% endblock nav %}
