--- a/ALLProject/pos/static/css/view_history.css
+++ b/ALLProject/pos/static/css/view_history.css
@@ -4,6 +4,7 @@ body, html {
     width: 100%;
     height: 100%;
     background-color: #F0ECDD;
+    font-family: "Mukta Mahee", sans-serif;
 }
 
 h1,h4 {
