--- a/ALLProject/users/templates/users/home.html
+++ b/ALLProject/users/templates/users/home.html
@@ -1,3 +1,6 @@
+{% extends "inventory/base.html" %}
+{% load static %}
+{% block content %}
 <!DOCTYPE html>
 {% load static %}
 <html>
@@ -44,3 +47,4 @@
             </div>
         </main>
     </body>
+{%endblock%}
