--- a/ALLProject/static/css/navigation.css
+++ b/ALLProject/static/css/navigation.css
@@ -1,11 +1,73 @@
-body html {
+/* body html {
     font-size: 1vw;
+} */
+
+#navcolumn-container {
+    width: 8%;
+    height: 100vh;
+    position: fixed;
+    top: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    z-index: 3;
 }
 
 #navcolumn {
-    display: inline-grid;
+    width: 5vw;
+    height: fit-content;
+    min-height: 10vh;
+    
+    border-radius: 2vw;
+    background-color: #CBD4C2;
+
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    text-align: center;
+    margin-left: 1.5vw;
+    padding: 2vh 0;
+}
+
+.nav-item{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 1vh 0 1vh 1.2vw;
+}
+
+.nav-logo {
+    width: 2.5vw;
+}
+
+.nav-title {
+    font-size: 1.2vw;
+    visibility: hidden;
+    margin-left: 1.25vw;
+}
+
+.nav-item {
+    text-decoration: none;
+    font-family: 'Mukta Mahee' sans-serif;
+    color: black;
+}
+
+.nav-item:hover{
+    font-weight: 600;
+}
+
+#navcolumn:hover {
+    width: fit-content;
+    padding-right: 2vw;
+    .nav-title {
+        visibility: visible;
+    }
+}
+
+/* #navcolumn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
     position: absolute;
     overflow: hidden;
@@ -54,10 +116,10 @@ body html {
     font-style: normal;
     text-align: left;
     color: #FFFFFF;
-}
+}*/
 
 /* Change .home for different pages */
-.logo.products {
+/* .logo.products {
     width: 2.5em;
     height: 2.5em;
     filter: drop-shadow(4em 0 0px #523249);
@@ -71,10 +133,10 @@ body html {
     font-size: large;
     padding-left: 6.2em;
     color: #523249;
-}
+} */
 
 /* Animations */
-#navcolumn:hover {
+/* #navcolumn:hover {
     overflow: hidden;
     width: 9em;
     .navfull {
@@ -95,4 +157,4 @@ a:hover {
     .navfull {
         color: #000;
     }
-}
+}  */
