--- a/ALLProject/static/css/user_list.css
+++ b/ALLProject/static/css/user_list.css
@@ -2,6 +2,7 @@ body, html {
     font-size: 1vw;
     margin: 0;
     background-color: #F0ECDD;
+    font-family: "Mukta Mahee", sans-serif;
 }
 
 h1 {
@@ -522,3 +523,4 @@ input.addUser {
 #delete-button:hover {
   background: #c7575b; 
 }
+
